--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@babel/core": "^7.24.7",
     "@babel/node": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4"
+    "mysql2": "^3.10.1",
+    "nodemon": "^3.1.4",
+    "uninstall": "^0.0.0"
   }
 }
