--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.19.2",
     "mysql2": "^3.10.1",
     "nodemon": "^3.1.4",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
     "uninstall": "^0.0.0"
   }
 }
